<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Modules.SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/content_bg"
        android:layout_marginHorizontal="25dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginVertical="5dp"
            android:src="@drawable/explore"
            app:tint="@color/dark_green" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameSignupET"
            android:textSize="16sp"
            android:background="@drawable/et_bg"
            android:padding="7dp"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:layout_marginVertical="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailSignupET"
            android:textSize="16sp"
            android:background="@drawable/et_bg"
            android:padding="7dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginVertical="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passSignupET"
            android:textSize="16sp"
            android:background="@drawable/et_bg"
            android:padding="7dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginVertical="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cPassSignupET"
            android:textSize="16sp"
            android:background="@drawable/et_bg"
            android:padding="7dp"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:layout_marginVertical="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contactSignupET"
            android:textSize="16sp"
            android:background="@drawable/et_bg"
            android:padding="7dp"
            android:hint="@string/contact"
            android:maxLength="10"
            android:inputType="number"
            android:layout_marginVertical="5dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signUpBtn"
            android:textSize="16sp"
            android:text="@string/sign_up_btn"
            android:layout_gravity="center"
            android:layout_marginVertical="15dp"
            android:backgroundTint="@color/dark_green"/>

    </LinearLayout>

</LinearLayout>