<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/emailLoginET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:background="@drawable/et_bg"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="7dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/passLoginET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:background="@drawable/et_bg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="7dp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/logInBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="15dp"
        android:backgroundTint="@color/dark_green"
        android:text="@string/log_in"
        android:textSize="16sp" />

</LinearLayout>