<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Modules.LogIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/content_bg"
        android:layout_marginHorizontal="25dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginVertical="5dp"
            android:src="@drawable/explore"
            app:tint="@color/dark_green" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailLoginET"
            android:textSize="16sp"
            android:background="@drawable/et_bg"
            android:padding="7dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginVertical="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passLoginET"
            android:textSize="16sp"
            android:background="@drawable/et_bg"
            android:padding="7dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginVertical="5dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logInBtn"
            android:textSize="16sp"
            android:text="@string/log_in"
            android:layout_gravity="center"
            android:layout_marginVertical="15dp"
            android:backgroundTint="@color/dark_green"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:textSize="15sp"
            android:text="@string/sign_up_intent"
            android:id="@+id/signUpTv"
            android:layout_gravity="end"
            android:textColor="@color/black"/>

    </LinearLayout>

</LinearLayout>