<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Modules.Profile">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp">

        <LinearLayout
            android:id="@+id/userInfoLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userNameIconTV"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@drawable/circle_bg"
                android:gravity="center"
                android:padding="7dp"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="7dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emailTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="7dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/bottomRL"
            android:layout_below="@+id/userInfoLL"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:padding="7dp"
                android:text="@string/switch_user"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/msgTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="7dp"
                android:text="@string/no_other_users_msg"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/loggedInUserRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:minHeight="250dp"
                android:padding="7dp" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/bottomRL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/logOutBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:backgroundTint="@color/lightBlue"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <Button
                android:id="@+id/addUserBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/light_grey"
                android:text="@string/add_user"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>